Changing folder structure and cleanning files
Signed-off-by: Luiz G R Freitas <luizfreitasaca@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "node",
       "request": "launch",
       "name": "Debug Nest Framework",
-      "args": ["${workspaceFolder}/src/main.ts"],
+      "args": ["${workspaceFolder}/app/main.ts"],
       "runtimeArgs": ["--nolazy", "-r", "ts-node/register", "-r", "tsconfig-paths/register"],
       "sourceMaps": true,
       "envFile": "${workspaceFolder}/.env",
